01-glvd-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: glvd
  name: glvd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "glvd"
  strategy: {}
  template:
    metadata:
      labels:
        app: glvd
    spec:
      volumes:
      - name: glvd-postgres-storage
        persistentVolumeClaim:
          claimName: glvd-postgres-pvc
      containers:
        - image: ghcr.io/gardenlinux/glvd-api:edge_bare
          name: glvd-api
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          livenessProbe:
            httpGet:
              path: "/actuator/health/liveness"
              port: 8080
          readinessProbe:
            httpGet:
              path: "/actuator/health/readiness"
              port: 8080
        - image: ghcr.io/gardenlinux/glvd-postgres:edgenotls
          name: glvd-postgres
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          ports:
            - containerPort: 5432
              hostPort: 5432
          volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: glvd-postgres-storage
        # TODO: data-ingestion should be running as a cron job
        - name: data-ingestion
          image: ghcr.io/gardenlinux/glvd:edge
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          command:
            - /bin/bash
            - -c
            - sleep 5 && echo start && /usr/local/src/ingest-postgres.sh && echo done && sleep infinity
