00_db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: glvd-database
  labels:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: database
spec:
  selector:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: database
  ports:
    - protocol: TCP
      port: 5432
      name: postgres
      targetPort: postgres
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: glvd-database
  labels:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: database
spec:
  replicas: 1
  serviceName: "glvd-database"
  selector:
    matchLabels:
      app.kubernetes.io/name: glvd
      gardenlinux.io/glvd-component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glvd
        gardenlinux.io/glvd-component: database
    spec:
      containers:
      - image: ghcr.io/gardenlinux/glvd-postgres:latest
        name: glvd-postgres
        ports:
          - containerPort: 5432
            protocol: TCP
            name: postgres
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-storage
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: 'default'
