02-glvd-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: glvd
  name: glvd
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: glvd
  type: LoadBalancer
