01_glvd-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: glvd
  labels:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: glvd-tracker
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: glvd
  selector:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: glvd-tracker
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glvd
  labels:
    app.kubernetes.io/name: glvd
    gardenlinux.io/glvd-component: glvd-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: glvd
      gardenlinux.io/glvd-component: glvd-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glvd
        gardenlinux.io/glvd-component: glvd-tracker
    spec:
      containers:
      - image: ghcr.io/gardenlinux/glvd-api:edge
        name: glvd-api
        # resources:
        #   requests:
        #     cpu: "1"
        #     memory: "2Gi"
        #   limits:
        #     cpu: "2"
        #     memory: "4Gi"
        ports:
        - containerPort: 8080
          protocol: TCP
          name: glvd
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 8080
        readinessProbe:
          httpGet:
            path: "/actuator/health/readiness"
            port: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glvd-api-ingress
  annotations:
    cert.gardener.cloud/purpose: managed
spec:
  rules:
  - host: glvd.ingress.glvd.gardnlinux.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glvd
            port: 
              number: 8080
  tls:
  - hosts:
    - glvd.ingress.glvd.gardnlinux.shoot.canary.k8s-hana.ondemand.com
    secretName: glvd-ingress-tls
